--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
    </head>
    <body>
       
-      <button onclick="window.location.href = 'SineWave_v1.2.html';">Sinewave Viz</button>
-       <button onclick="window.location.href = 'SineWave_v1.2.html';">Choreography</button>
-        <button onclick="window.location.href = 'SineWave_v1.2.html';">Snake Game</button>
-	<button onclick="window.location.href = 'SineWave_v1.2.html';">Line Game</button>
+      <button onclick="window.location.href = 'SineWave.html';">Sinewave Viz</button>
+       <button onclick="window.location.href = 'SineWave.html';">Choreography</button>
+        <button onclick="window.location.href = 'SineWave.html';">Snake Game</button>
+	<button onclick="window.location.href = 'SineWave.html';">Line Game</button>
    </body>
 </html>
