--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <body>
       
       <button onclick="window.location.href = 'SineWave.html';">Sinewave Viz</button>
-       <button onclick="window.location.href = 'SineWave.html';">Choreography</button>
+       <button onclick="window.location.href = 'ChoreographyFUN.html';">Choreography</button>
         <button onclick="window.location.href = 'SineWave.html';">Snake Game</button>
 	<button onclick="window.location.href = 'SineWave.html';">Line Game</button>
    </body>
