--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       
       <button onclick="window.location.href = 'SineWave.html';">Sinewave Viz</button>
        <button onclick="window.location.href = 'ChoreographyFUN.html';">Choreography</button>
-        <button onclick="window.location.href = 'SineWave.html';">Snake Game</button>
+        <button onclick="window.location.href = 'SnakeGame_Classic-v1.0.html';">Snake Game</button>
 	<button onclick="window.location.href = 'SineWave.html';">Line Game</button>
    </body>
 </html>
