--- a/index.html
+++ b/index.html
@@ -169,12 +169,33 @@
 
 
 
+<hr>
+<article class="blog-post">
+<h2 class="blog-post__title"><a href="ChoreographyFUN.html">Choreography</a></h2>
+<div class="image-wrap"><img src="https://raw.githubusercontent.com/Nikeshbajaj/utis/master/images/Choreo.gif" alt="" width="500" align="middle"></div>
+<h3><a href="ChoreographyFUN.html" class="button">Choreography</a></h3>
+</article>
 
-		<article class="blog-post">
-				<p><a href="SnakeGame.html" class="button">Go</a>
-			</p></div>
+<hr>
+<article class="blog-post">
+<h2 class="blog-post__title"><a href="SnakeGame_Classic-v1.0.html">Snake Game</a></h2>
+<div class="image-wrap"><img src="https://raw.githubusercontent.com/Nikeshbajaj/ClassicSnakeGame/master/SnakeGame_Classic%20v1.0.gif" alt="" width="500" align="middle"></div>
+<h3><a href="SnakeGame_Classic-v1.0.html" class="button">Snake Game</a></h3>
+</article>
 
-		</article>
+<hr>
+<article class="blog-post">
+<h2 class="blog-post__title"><a href="SineWave.html">SineWave Oscilloscope</a></h2>
+<div class="image-wrap"><img src="https://raw.githubusercontent.com/Nikeshbajaj/SineWaveOscilloscope/master/Screenshot1.png" alt="" width="500" align="middle"></div>
+<h3><a href="SineWave.html" class="button">Sinewave Viz</a></h3>
+</article>
+<!--
+<button onclick="window.location.href = 'SineWave.html';">Sinewave Viz</button>
+<button onclick="window.location.href = 'ChoreographyFUN.html';">Choreography</button>
+<button onclick="window.location.href = 'SnakeGame_Classic-v1.0.html';">Snake Game</button>
+<button onclick="window.location.href = 'SineWave.html';">Line Game</button>
+-->
+</article>
 
 
 
